# soundTracker

./: .env  .gitignore  .windsurfrules  CHANGES.md  PLANNING.md  README.md  TASK.md  TODO.md  docker-compose.yml  full_test_output.txt  full_test_output2.txt  run.bat  run.sh  run_soundTracker.bat  run_soundTracker.sh  soundtracker.db  stop_soundTracker.bat  stop_soundTracker.sh  test.db  test_audio_websocket.py  test_output.txt  test_output3.txt  test_output4.txt  test_output5.txt  test_websocket.py
.windsurf/rules/: python-apps.md
backend/: .dockerignore  .env.sample  API_DOCUMENTATION.md  Dockerfile  README.md  ai.py  alembic.ini  audio.py  audio_capture.py  config.py  database.py  debug_routes.py  main.py  models.py  pyproject.toml  requirements.txt  run_backend.bat  run_backend.sh  schemas.py  setup.py  soundtracker.db  test_api_curl.ps1  test_api_endpoints.py  test_app.py  test_audio_endpoint.py  test_db_operations.py  test_main.py  test_output.txt  test_requirements.txt  test_websocket.py
backend/alembic/: env.py
backend/alembic/versions/: 2025_07_03_1329-9cd85643c18f_initial_migration.py
backend/routers/: ai.py  ai.py.bak  audio_capture.py  sound_event.py
backend/static/: audio_monitor.html  audio_test.html
backend/tests/: test_ai.py  test_audio_capture.py  test_audio_integration.py  test_sound_event.py
frontend/: README.md  pubspec.yaml
frontend/android/app/: build.gradle.kts
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: main.dart
frontend/lib/providers/: audio_provider.dart
frontend/lib/screens/: home_screen.dart
frontend/linux/: CMakeLists.txt
(+9 files in other folders)
