[tool.poetry]
name = "soundtracker-backend"
version = "0.4.0"
description = "Backend for SoundTracker application with AI sound classification"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.68.2"
uvicorn = {extras = ["standard"], version = "^0.15.0"}
python-multipart = "^0.0.20"
python-dotenv = "^1.0.0"
sqlmodel = "^0.0.11"
sqlalchemy = "^1.4.54"
sounddevice = "^0.4.7"
numpy = "^1.26.4"
librosa = "^0.10.2"
resampy = "^0.3.1"
tensorflow = "^2.15.0"
tensorflow-hub = "^0.15.0"
soundfile = "^0.12.1"
pydantic = "^1.10.7"  # Downgraded for sqlmodel compatibility
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
httpx = "^0.24.1"
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.5.1"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
